# CLIP_analysis

./: .cursorignore  .env copy  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHENTICATED_CLIP_USAGE.md  CHANGELOG.md  CLIP_API.md  CLIP_API_GUIDE.md  CLIP_API_TEST_RESULTS.md  CODE_REVIEW_SUMMARY.md  COMPLETE_CODE.TXT  CONFIG.md  CONFIGURATION_GUIDE.md  CONFIGURATION_GUIDE_COMPLETE.md  CONFIGURATION_MIGRATION_COMPLETE.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  CodeSheetConfig.ini  Code_From_CWD.txt  Code_From_analysis.txt  Code_From_utils.txt  DEVELOPMENT_IDEAS.md  DEVELOPMENT_NOTES.md  Dir_Structure.txt  ENV_SETTINGS_COMPLETE.md  FEATURES.md  GITHUB_REPOSITORY_DESCRIPTION.md  GITHUB_UPDATE_SUMMARY.md  HIGH_PRIORITY_CHANGES.md  IMPROVEMENTS_PLAN.md  IMPROVEMENTS_SUMMARY.md  Info.txt  LICENSE  LLM_Prompts.json  Makefile  Output_LLM.json  PINOKIO_API_SETUP.md  QUICK_START_CONFIG.md  (+75 more)
CODE_ data_analysis/: data_analysis.py
Images/1/: RANDOS (30)_CLIPAnalyzer.json
Images/2/: FarSide (26)_CLIPAnalyzer.json  RANDOS (20)_CLIPAnalyzer.json
Images/Group/: 00160-1692874386-sd_xl_base_1.0-7-DPM++ 2M Karras-1024x1024 - 20240603031306_CLIPAnalyzer.json  00162-1692874388-sd_xl_base_1.0-7-DPM++ 2M Karras-1024x1024 - 20240603031307_CLIPAnalyzer.json  00369-607022595-sd_xl_base_1.0-4-DPM++ 2M Karras-1024x1024 - 20240603032750_CLIPAnalyzer.json
Images/test/: FarSide (81)_CLIPAnalyzer.json  sample_CLIPAnalyzer.json
OldCode/: config.py  utils.py
Output/: api_communication_log.json
Output/CLIP_analysis/: 1_best_Prompts.txt  1_caption_Prompts.txt  1_classic_Prompts.txt  1_fast_Prompts.txt  1_negative_Prompts.txt  2_best_Prompts.txt  2_caption_Prompts.txt  2_classic_Prompts.txt  2_fast_Prompts.txt  2_negative_Prompts.txt  test_best_Prompts.txt  test_caption_Prompts.txt  test_classic_Prompts.txt  test_fast_Prompts.txt  test_negative_Prompts.txt
analysis/: __init__.py  clip_analysis.py  llm_analysis.py  test_process_llm_images.py
config/: prompts.json
examples/: basic_usage.py
scripts/: README.md  check_db.py  comprehensive_test_fix.py  enable_clip.py  fix_logging_calls.py  quick_test_check.py  setup_env.py  test_clip_api.py  test_clip_api_auth.py
src/: __init__.py
src/analyzers/: LLM_Prompts.json  __init__.py  clip_analyzer.py  llm_analyzer.py  llm_manager.py  metadata_extractor.py
src/api/: prompts.py
src/config/: __init__.py  config_manager.py  config_models.py  models.json  prompts.json
src/database/: db_manager.py
src/processors/: __init__.py  directory_processor.py  directory_processor_backup.py
src/routes/: __init__.py  api_routes.py  main_routes.py  prompts_routes.py
src/services/: __init__.py  analysis_service.py  clip_service.py  config_service.py  image_service.py
src/utils/: __init__.py  debug_utils.py  error_handler.py  file_utils.py  installer.py  logger.py  progress.py  wildcard_generator.py
src/viewers/: __init__.py  results_viewer.py  web_interface.py  web_interface_refactored.py
src/viewers/templates/: base.html  (+11 more)
tests/: __init__.py  run_refactored_tests.py  run_simple_tests.py  run_tests.py  run_web_tests.py
tests/integration/: __init__.py  test_system.py  test_ui_interactions.py  test_web_interface_integration.py  test_web_ui_integration.py
tests/misc/: README.md  simple_test.py  test_all_refactoring.py  test_cli_fixed.py  test_cli_non_interactive.py  test_clip.py  test_config_saving.py  test_core_modules.py  test_new_config_system.py  test_new_features.py  test_prompts_implementation.py  test_refactored_system.py  test_refactoring_utilities.py
tests/unit/: __init__.py  test_analysis_service.py  test_cli_commands.py  test_clip_analyzer.py  test_config_manager.py  test_config_service.py  test_database_manager.py  test_directory_processor.py  test_image_service.py  test_installer.py  test_llm_analyzer.py  test_main.py  test_metadata_extractor.py  test_results_viewer.py  test_web_interface.py  test_web_interface_refactored.py  test_wildcard_generator.py
utils/: __init__.py  api_analysis.py  api_utils.py  image_utils.py  logging_setup.py
(+14 files in other folders)
